# CentroidingPoc

./: Makefile  README.md  pyproject.toml
crowsnest/poc/: logging_config.py  run.py
crowsnest/poc/eval/: benchmark_centroiding.py  profile_centroiding.py  runner.py
crowsnest/poc/io/: frame_sources.py
crowsnest/poc/pipeline/: centroiding.py
crowsnest/poc/sim/: synthetic_star_field.py
docs/decisions/: 0000-decision-template.md
docs/templates/: template_decisions.md
tests/poc/: test_run_visualization.py
tests/poc/eval/: test_runner.py
tests/poc/io/: test_frame_sources.py
tests/poc/pipeline/: test_centroiding.py
