[project]
name = "crowsnest"
version = "0.1.0"
description = "poc of star detect algos"
authors = [
    {name = "Mateusz Tyc",email = "tycmat9@gmail.com"}
]
package-mode = false
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "rich (>=14.1.0,<15.0.0)",
]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)",
    "py-spy (>=0.4.1,<0.5.0)",
    "snakeviz (>=2.2.2,<3.0.0)",
    "pyinstrument (>=5.1.1,<6.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
